--- a/css/index.css
+++ b/css/index.css
@@ -54,11 +54,15 @@ a.bouton:hover {
 
 /* -----------------------------------------------------Footer-------------------------------------------------- */
 footer {
-    background-color: #333; /* Couleur de fond du footer */
-    color: #fff; /* Couleur du texte du footer */
+    background-color: #333;
+    color: #fff;
     padding: 20px;
     text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%; /* Assurez-vous que le footer occupe toute la largeur */
 }
+
 
 .footer-nav ul {
     list-style-type: none;
