--- a/css/acceuilAbonne.css
+++ b/css/acceuilAbonne.css
@@ -33,36 +33,11 @@ main {
     text-align: center;
     color: #ffffff; /* Couleur du texte */
     display: flex; /* Utilisation du modèle de disposition flexbox */
-    flex-direction: column; /* Alignement vertical des éléments */
     justify-content: center; /* Centrage des éléments horizontalement */
     align-items: center; /* Centrage des éléments verticalement */
     height: calc(100vh - 460px);
 }
 
-.form {
-    width: 300px;
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.champ {
-    margin-bottom: 15px;
-}
-
-.champ label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-}
-
-.champ input {
-    width: 300px;
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-}
 button {
     display: inline-block;
     padding: 10px 20px; /* Espacement interne */
@@ -81,53 +56,46 @@ button:hover {
     background-color: #6e004a; /* Couleur de fond au survol */
 }
 
-/* Style de base pour l'élément select */
-select {
-    appearance: none; /* Masque l'apparence par défaut */
-    padding: 10px; /* Espacement interne */
-    font-size: 16px; /* Taille de police */
-    border: 1px solid #ccc; /* Bordure */
-    border-radius: 10px; /* Coins arrondis */
-    background-color: #fff; /* Couleur de fond */
-    cursor: pointer; /* Curseur pointeur */
-    width: 200px; /* Largeur */
-}
-/* Style au survol */
-select:hover {
-    border-color: #007bff; /* Changement de couleur de la bordure au survol */
-}
 
-/* Style lorsqu'il est activé */
-select:focus {
-    outline: none; /* Supprime le contour de mise au point */
-    box-shadow: 0 0 5px #007bff; /* Ajoute une ombre portée au focus */
+.menu {
+    position: fixed;
+    top: 220px;
+    left: 0;
+    width: 250px; /* Largeur du menu vertical */
+    height: 100vh;
+    flex-direction: column; /* Alignement vertical des éléments */
 }
-/* Style de base pour l'élément input de type submit */
-input[type="submit"] {
+ 
+.menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+ 
+.menu li {
+    margin: 10px;
+}
+ 
+.menu a {
+    display: block;
+    padding: 15px 20px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
     display: inline-block;
-    padding: 10px 20px; /* Espacement interne */
+    padding: 10px 20px;
     background-color: #ca16ee; /* Couleur de fond */
     color: #fff; /* Couleur du texte */
     text-decoration: none; /* Supprime le soulignement */
-    border: none; /* Pas de bordure */
     border-radius: 20px; /* Coins arrondis */
-    cursor: pointer; /* Curseur pointeur */
-    transition: background-color 0.3s ease; /* Transition douce pour le changement de couleur de fond */
-    font-size: 20px; /* Taille du texte */  
-}
-
-/* Style au survol */
-input[type="submit"]:hover {
-    background-color: #0056b3; /* Changement de couleur de fond au survol */
-}
-
-/* Style lorsqu'il est activé */
-input[type="submit"]:focus {
-    outline: none; /* Supprime le contour de mise au point */
-    box-shadow: 0 0 5px #0056b3; /* Ajoute une ombre portée au focus */
+    margin-right: 10px; /* Espacement entre les liens */
 }
 
 
+#profile-image{
+    max-width: 250px; /* Taille maximale du logo */
+}
 /* -----------------------------------------------------Footer-------------------------------------------------- */
 footer {
     background-color: #333; /* Couleur de fond du footer */
@@ -156,4 +124,4 @@ footer {
     color: #fff;
 }
 
-
+ 
