--- a/css/acceuilAbonne.css
+++ b/css/acceuilAbonne.css
@@ -31,24 +31,24 @@ header {
     position: absolute;
     top: 20px;
     right: 20px;
-}
-
-#onglets ul {
+    }
+    
+    #onglets ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-}
-
-#onglets ul li {
+    }
+    
+    #onglets ul li {
     display: inline-block;
     margin-right: 10px;
-}
-
-#onglets ul li:last-child {
+    }
+    
+    #onglets ul li:last-child {
     margin-right: 0;
-}
-
-#onglets ul li a {
+    }
+    
+    #onglets ul li a {
     text-decoration: none;
     color: #000; /* Couleur du texte */
     padding: 8px 16px; /* Ajustement de l'espacement */
@@ -56,19 +56,17 @@ header {
     border-radius: 5px;
     font-size: 18px; /* Taille de la police */
     font-family: "Times New Roman", Times, serif; /* Police de caractères classique */
-    display: inline-block;
-}
-
-#onglets ul li a:hover {
+    }
+    
+    #onglets ul li a:hover {
     background-color: #eee; /* Fond gris clair au survol */
-}
-
-
+    }
+    
 
 /* Ajout pour la suggestion de profil */
 .profile-container {
     text-align: center;
-    margin-top: 50px; /* Marge supérieure pour l'espace entre le message d'accueil et la suggestion de profil */
+    margin-top: 10px; /* Marge supérieure pour l'espace entre le message d'accueil et la suggestion de profil */
 }
 .profile-image {
     max-width: 20px; /* Largeur maximale de l'image */
@@ -132,8 +130,8 @@ main {
 button {
     display: inline-block;
     padding: 10px 20px; /* Espacement interne */
-    background-color: #ca16ee; /* Couleur de fond */
-    color: #fff; /* Couleur du texte */
+    background-color: #ffffff; /* Couleur de fond */
+    color: #000000; /* Couleur du texte */
     text-decoration: none; /* Supprime le soulignement */
     border: none; /* Pas de bordure */
     border-radius: 5px; /* Coins arrondis */
