fond couleur bouton

--- a/css/messagerie.css
+++ b/css/messagerie.css
@@ -66,7 +66,7 @@ main {
 button {
     display: inline-block;
     padding: 10px 20px; /* Espacement interne */
-    background-color: #ca16ee; /* Couleur de fond */
+    background-color: #000000; /* Couleur de fond */
     color: #fff; /* Couleur du texte */
     text-decoration: none; /* Supprime le soulignement */
     border: none; /* Pas de bordure */
