modification taille police information profil

--- a/css/acceuilAbonne.css
+++ b/css/acceuilAbonne.css
@@ -59,7 +59,7 @@ header {
     }
     
     #onglets ul li a:hover {
-    background-color: #000000; /* Fond gris clair au survol */
+    background-color: #6e004a; 
     }
     
 
