--- a/css/accueilAdmin.css
+++ b/css/accueilAdmin.css
@@ -59,7 +59,7 @@ header {
     }
     
     #onglets ul li a:hover {
-    background-color: #eee; /* Fond gris clair au survol */
+    background-color: #6e004a; 
     }
     
 /* Ajout pour la suggestion de profil */
@@ -122,8 +122,8 @@ header {
 }
 
 #boutons ul li a:hover {
-    background-color: #000; /* Couleur de fond au survol */
-    color: #fff; /* Couleur du texte au survol */
+    background-color: #6e004a; /* Couleur de fond au survol */
+    color: #000000; /* Couleur du texte au survol */
 }
 
 
