--- a/css/acceuilUtilisateur.css
+++ b/css/acceuilUtilisateur.css
@@ -60,7 +60,6 @@ header {
     #onglets ul li a:hover {
     background-color: #6e004a; 
     }
-
 /* -------------------------------------------------------main------------------------------------------ */
 
 main {
@@ -74,31 +73,47 @@ main {
     height: calc(100vh - 460px);
 }
 
-main li{
-    list-style-type: none; /* Supprime les points à gauche */
-    padding: 0; /* Supprime le remplissage par défaut */
-    background-color: #f4f4f4; /* Couleur de fond pour chaque élément de liste */
-    padding: 10px; /* Ajoute un espacement à l'intérieur de chaque élément de liste */
-    color: black;
+.form {
+    width: 300px;
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-#modif {
-    display: inline-block;
+.champ {
+    margin-bottom: 15px;
+}
 
+.champ label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.champ input {
+    width: 300px;
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+/* Styles pour transformer un lien en bouton */
+main a {
+    display: inline-block;
+    padding: 10px 20px; /* Espacement interne */
     background-color: #ca16ee; /* Couleur de fond */
     color: #fff; /* Couleur du texte */
     text-decoration: none; /* Supprime le soulignement */
     border: none; /* Pas de bordure */
-    border-radius: 5px; /* Coins arrondis */
+    border-radius: 20px; /* Coins arrondis */
     cursor: pointer; /* Curseur pointeur */
     transition: background-color 0.3s ease; /* Transition douce pour le changement de couleur de fond */
-    width: 220px; /* Largeur du bouton */
-    height: 30px; /* Hauteur du bouton */
-    font-size: 20px; /* Taille du texte */
 }
-#modif:hover {
+
+main a:hover {
     background-color: #6e004a; /* Couleur de fond au survol */
 }
+
 
 /* -----------------------------------------------------Footer-------------------------------------------------- */
 footer {
